# haplograph

./: .dockstore.yml  Cargo.toml  README.md
.github/workflows/: README.md  ci.yml  release.yml  test-small.yml
docker/: Dockerfile
scripts/: test-local.sh
src/: asm.rs  build.rs  call.rs  eval.rs  extract.rs  genotype.rs  graph.rs  hap.rs  haplopan.rs  haplotypes.rs  intervals.rs  main.rs  methyl.rs  util.rs
test/: HG002_HLA-A.all.fa  HG002_HLA_A.bam  HG002_HLA_A.bam.bai  HG002_HLA_query.fasta  region.txt  test.bed
wdl/: AssemblyAlignment.wdl  DownloadWget.wdl  FufiHLA.wdl  FufiHLA_evaluation_all.wdl  FufiHLA_ref_construction.wdl  HLA-LA.wdl  MidasHLA.wdl  PheWas.wdl  concat_truth.wdl  haplograph.wdl  haplograph_call_eval.wdl  haplograph_chromosome.wdl  haplograph_eval.wdl  haplograph_eval_alignment.wdl  haplograph_eval_all.wdl  haplograph_eval_annotation.wdl  haplograph_eval_call.wdl  haplograph_eval_other_genes.wdl  haplograph_full_length_MHC.wdl  haplograph_long.wdl  haplograph_long_intervals.wdl  haplograph_parameter_opt.wdl  haplograph_run.wdl  haplograph_single_interval.wdl  haplograph_somatic_evaluation.wdl  haplopan.wdl  haplopan_eval_annotation.wdl  hifiasm_local_asm.wdl  locityper.wdl  pangenome_haplograph.wdl  vg_graph.wdl  vg_hifiasm_mhc.wdl
