[package]
name = "haplograph"
version = "0.1.0"
edition = "2021"
authors = ["Hang Su <suhang@broadinstitute.org>"]
description = "A bioinformatics tool for haplotype analysis"
license = "MIT"
repository = "https://github.com/broadinstitute/haplograph"
keywords = ["bioinformatics", "haplotype", "genomics"]
categories = ["science::bio-informatics"]

[dependencies]
bio = "2.0.1"
ndarray = "0.15"
flate2 = "1.0.30"
serde_json = "1.0.120"
serde = "1.0.204"
rust-htslib = { version = "0.47.0", features = ["curl", "gcs"] }
rayon = "1.7"
csv = "1.2" 
rand = "0.8"
regex = "1.9.5"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
url = "=2.5.4"
intervals = "2.1.0"
minimap2 = "0.1.28"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.5"
